# http-proxy-lb

./: AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.example.yaml  copilot-Instructions.md  docker-compose.yml  http-proxy-lb.service
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: docker-smoke.sh
src/: admin.rs  config.rs  health.rs  main.rs  proxy.rs  upstream.rs
