[package]
name = "http-proxy-lb"
version = "1.0.0"
edition = "2021"
description = "HTTP relay proxy with upstream load balancing, health checking, and hot reload"
license = "MIT"

[[bin]]
name = "http-proxy-lb"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.50.0", features = ["full"] }
# HTTP/1.x request/response parsing
httparse = "1.10.1"
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
yaml_serde = "0.10.4"
# CLI
clap = { version = "4.6.0", features = ["derive"] }
# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
# Utilities
anyhow = "1.0.102"
base64 = "0.22.1"
parking_lot = "0.12.5"
